--- a/package.json
+++ b/package.json
@@ -60,13 +60,16 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^1.7.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.4.2",
+    "postcss-calc": "^5.0.0",
+    "postcss-custom-media": "^5.0.0",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-import": "^7.1.3",
     "postcss-loader": "^0.8.0",
+    "postcss-nested": "^1.0.0",
     "redbox-react": "^1.2.0",
     "redux-devtools": "^3.0.1",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.1",
-    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
